# Private-Federated-Learning-for-STLF

./: .gitignore  AggregationStrategy.py  Experiments-FedAvg-Transformers.ipynb  Experiments-FedAvg-diff-transformers.ipynb  Experiments-fedAvg-diff.ipynb  Experiments-fedProx-baseline-and-diff.ipynb  Experiments-fedProx-cnn-lstm-baseline-and-diff.ipynb  Experiments-scaffold-diff-transformer.ipynb  Experiments-scaffold.ipynb  FedAVG.ipynb  FedAvg-Diff-cnn-lstm.ipynb  Model-Predictions.ipynb  Model-Predictions_PN.ipynb  Models.py  NRMSE_summary_by_strategy.csv  NRMSE_summary_by_strategy2.csv  Preprocess.py  README.md  Strategy.py  TS-FL-All-Experiments copy 4.ipynb  TS-FL-All-Experiments copy 5.ipynb  TS-FL-All-Experiments copy.ipynb  TS-FL-All-Experiments-diff-diff.ipynb  TS-FL-All-Experiments-fedProx-transformer.ipynb  TS-FL-All-Experiments-scaffold-cnn-lstm.ipynb  TS-FL-All-Experiments-scaffold-diff-cnn-lstm.ipynb  TS-FL-All-Experiments-scaffold-diff-transformer.ipynb  TS-FL-All-Experiments-scaffold-diff.ipynb  TS-FL-All-Experiments-scaffold-transformer.ipynb  TS-FL-All-Experiments-transformers.ipynb  TS-FL-All-Experiments.ipynb  TS-FL-DAS-Experiment copy.ipynb  TS-FL-DAS-Experiment.ipynb  TS-FL-Hour-Experiments copy.ipynb  TS-FL-Hour-Experiments.ipynb  TS-FedAVG-with-CLustering.ipynb  TS-FedAVG.ipynb  Test_metrics_by_epoch-MoELSTM-EW-FedAvgM.ipynb  Visualise.ipynb  ashrae-EDA-cleanup.ipynb  (+16 more)
agger_metrics40-50-168/: all_stats_round48_metric_MAE_sort_by_Model_Strategy.csv  all_stats_round48_metric_RMSE_sort_by_Model_Strategy.csv  (+7 more)
predictions-plots/: 128_gru_fedAvg.csv  (+47 more)
(+3544 files in other folders)
